updated oneHot encoding of subjects
check if the encoding is correct

--- a/oneHotEncodedSubjectArray.ipynb
+++ b/oneHotEncodedSubjectArray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,98 @@
     "# Iterate each doc \n",
     "for i in range(len(subjectData)):\n",
     "    # itearte over the list of subjects in each doc \n",
-    "    docSubjectList = []\n",
+    "    docSubjectList = [0] *  len(ListCleanedWholeSubject)\n",
     "    for j in range(len(subjectData[i])):\n",
     "        for k in range(len(ListCleanedWholeSubject)):\n",
     "            if (subjectData[i][j]==ListCleanedWholeSubject[k]):\n",
-    "                docSubjectList.append(1)\n",
-    "            else: \n",
-    "                docSubjectList.append(0)\n",
+    "                docSubjectList[k]=1\n",
     "                    \n",
     "    onHotSubjectList.append(docSubjectList)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 1 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Onehot subject list nparray  \n",
+    "#type(onHotSubjectList[0])\n",
+    "onHotArray = np.array(onHotSubjectList)\n",
+    "print(onHotArray)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if correct\n",
+    "for i in range(len(onHotArray)):\n",
+    "    if len(onHotArray[i])!=161:\n",
+    "        print(\"row\",i,\" hsa problem with length\")\n",
+    "    if sum(onHotArray[i])!=len(subjectData[i]):\n",
+    "        print(\"row\",i,\" hsa problem with matching\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mathematics - Quantum Algebra', 'Mathematics - Combinatorics']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subjectData[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(onHotArray[3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
